# CSClub_GOL

./: .gitignore  CMakeLists.txt  InstallingForDevelopment.md  README.md
src/app/: BasicGOL.cpp  DeferredRender.cpp  ExampleGOL.cpp  FloatGOL.cpp  FloatingGOL.cpp  GOL.cpp  MulticolorGOL.cpp
src/inc/: Buffer.hpp  GLSetup.hpp  MeshData.hpp  MeshGLData.hpp  RenderGOL.hpp  SETTINGS.hpp  Scene.hpp  Shader.hpp  Utility.hpp
src/lib/: Buffer.cpp  GLSetup.cpp  MeshGLData.cpp  RenderGOL.cpp  Scene.cpp  Shader.cpp  Utility.cpp
src/shaders/BasicGOL/: Display.fs  Display.vs  GeoMesh.fs  GeoMesh.vs  Light.fs  LightDebug.fs  Step.fs
src/shaders/DeferredRender/: GeoMesh.fs  GeoMesh.vs
src/shaders/ExampleGOL/: Display.fs  Step.fs
src/shaders/FloatingGOL/: Display.fs  GeoMesh.fs  GeoMesh.vs  Step.fs
src/shaders/General/: GeoMesh1.fs  GeoMesh1.vs
src/shaders/Multicolor/: Display.fs  Geo.fs  Geo.vs  Step.fs
